src/patternfly/components/NotificationDrawer/notification-drawer.scss
/* ... */
.pf-c-notification-drawer__list-item-header {
  display: flex;
  align-items: baseline;
  grid-row: 1 / 2;
  margin-bottom: var(--pf-c-notification-drawer__list-item-header--MarginBottom);
}

.pf-c-notification-drawer__list-item-header-icon {
  margin-right: var(--pf-c-notification-drawer__list-item-header-icon--MarginRight);
  color: var(--pf-c-notification-drawer__list-item-header-icon--Color);
}

.pf-c-notification-drawer__list-item-header-title {
  font-weight: var(--pf-c-notification-drawer__list-item-header-title--FontWeight);
  word-break: break-word;

  &.pf-m-truncate {
    @include pf-line-clamp("var(--pf-c-notification-drawer__list-item-header-title--max-lines)");
  }
}

.pf-c-notification-drawer__list-item-action {
  grid-column: 2;
  grid-row: 1 / -1;
}

.pf-c-notification-drawer__list-item-description {
  grid-row: 2 / 3;
  margin-bottom: var(--pf-c-notification-drawer__list-item-description--MarginBottom);
}

.pf-c-notification-drawer__list-item-timestamp {
  grid-row: 3 / 4;
  font-size: var(--pf-c-notification-drawer__list-item-timestamp--FontSize);
  color: var(--pf-c-notification-drawer__list-item-timestamp--Color);
}

.pf-c-notification-drawer__group-list {
  display: flex;
  flex-direction: column;
  min-height: 0;
  max-height: 100%;
}

.pf-c-notification-drawer__group {
  display: flex;
  flex-shrink: 0;
  flex-direction: column;

  &.pf-m-expanded {
    flex: 1;
    min-height: var(--pf-c-notification-drawer__group--m-expanded--MinHeight);

    + .pf-c-notification-drawer__group {
      border-top: var(--pf-c-notification-drawer__group--m-expanded--group--BorderTopWidth) solid var(--pf-c-notification-drawer__group--m-expanded--group--BorderTopColor);
    }
  }

  .pf-c-notification-drawer__list {
    overflow: auto;
  }

  .pf-c-notification-drawer__list-item:last-child {
    --pf-c-notification-drawer__list-item--BorderBottomWidth: 0;
    --pf-c-notification-drawer__list-item--before--Bottom: 0;
  }
}

.pf-c-notification-drawer__group-toggle {
  display: flex;
  align-items: baseline;
  width: 100%;
  padding: var(--pf-c-notification-drawer__group-toggle--PaddingTop) var(--pf-c-notification-drawer__group-toggle--PaddingRight) var(--pf-c-notification-drawer__group-toggle--PaddingBottom) var(--pf-c-notification-drawer__group-toggle--PaddingLeft);
  background-color: var(--pf-c-notification-drawer__group-toggle--BackgroundColor);
  border: solid var(--pf-c-notification-drawer__group-toggle--BorderColor);
  border-width: 0 0 var(--pf-c-notification-drawer__group-toggle--BorderBottomWidth) 0;
  outline-offset: var(--pf-c-notification-drawer__group-toggle--OutlineOffset);
}

.pf-c-notification-drawer__group-toggle-title {
  @include pf-line-clamp("var(--pf-c-notification-drawer__group-toggle-title--max-lines)");

  margin-right: var(--pf-c-notification-drawer__group-toggle-title--MarginRight);
  text-align: left;
}

.pf-c-notification-drawer__group-toggle-count {
  margin-right: var(--pf-c-notification-drawer__group-toggle-count--MarginRight);
  margin-left: auto;
}

.pf-c-notification-drawer__group-toggle-icon {
  margin-right: var(--pf-c-notification-drawer__group-toggle-icon--MarginRight);
  color: var(--pf-c-notification-drawer__group-toggle-icon--Color);
  transition: var(--pf-c-notification-drawer__group-toggle-icon--Transition);

  .pf-c-notification-drawer__group.pf-m-expanded & {
    transform: rotate(var(--pf-c-notification-drawer__group--m-expanded__group-toggle-icon--Rotate));
  }
}

